<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Freshmen-Activity!</string>
    <string name="app_name">Freshmen-Navigator</string>
    
    <!-- Main --> 
    <string name="start">Navigate from</string>
    <string name="startNavi">Navigate</string>
    <string name="ziel">Navigate to</string> 
    <string name="radio_winet">GoogleMap(Internet+GPS)</string>
    <string name="radio_woinet">Compass(GPS)</string>
    <string name="gotoMap">Get view in Google-Map</string>
    <string name="addNP">ADD NAVIPOINT</string>
    
    <!-- NaviPoints --> 
    <string name="caption">Create a Navi-Point:</string>
    <string name="name">NAME</string>
    <string name="abbrev">ABBREVIATION</string>
    <string name="location">Receive Location</string>
    <string name="longi">LONGITUDE</string>
    <string name="lat">LATIDUDE</string>
    <string name="save">SAVE</string>
    
    
    
   
    <!-- Menue --> 
    <string name="menu_backtohome">Back to Homescreen</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_settings">Settings</string>
    
    <string name="rbgps">Use GPS proivder for your tracking</string>
    <string name="rbnetwork">Use network provider for tracking</string>
    <string name="rbpassive">Use passive provider for tracking</string>
    
   <!--  <string name="GOOGLE_MAPS_API_KEY">0hQTV9_MVtDGNi0O61gwzAObkcV2Hiu0EtaEbww</string>	-->	<!-- robu -->
   <string name="GOOGLE_MAPS_API_KEY">0hQTV9_MVtDEIiR84XTrURmjOmXRensLJl92j_w</string> <!-- dd -->
   
   <!-- use this command to generate a map-api-key
   
   keytool -v -list -alias androiddebugkey -keystore "C:\Dokumente und Einstellungen\Besitzer\.android\debug.keystore" -storepass android -keypass android
    
    enter your MD5 here: https://developers.google.com/android/maps-api-signup
    --> 
    
</resources>
