<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@xml/mygradient_background_main"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/caption"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/nameE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:inputType="text" >
    </EditText>

    <TextView
        android:id="@+id/abbrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abbrev"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/abbrevE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Abbreviation"
        android:inputType="text" >
    </EditText>

    <CheckBox
        android:id="@+id/locCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location" />

    <TextView
        android:id="@+id/longi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longi"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/longiE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Longitude"
        android:inputType="numberDecimal" >
    </EditText>

    <TextView
        android:id="@+id/lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lat"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/latE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Latitude"
        android:inputType="numberDecimal" >
    </EditText>

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:background="@xml/myroundrectangle"
        android:onClick="save"
        android:text="@string/save"
            android:textColor="#FFFFFF"  />

</LinearLayout>